--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- FONT -->
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                 <h1>LADY</h1>
             </div>
             <div class="pic">
-                <img src="/Images/original.jpeg" alt="Illustration Selfportrait">
+                <img src="Images/original.jpeg" alt="Illustration Selfportrait">
             </div>
             <nav>
                 <ul>
